; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/realmode/rm/extr_....bootvideo-bios.c_set_bios_mode.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/realmode/rm/extr_....bootvideo-bios.c_set_bios_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.biosregs = type { i32, i32, i32 }

@do_restore = common dso_local global i32 0, align 4
@boot_params = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @set_bios_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_bios_mode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.biosregs, align 4
  %5 = alloca %struct.biosregs, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = call i32 @initregs(%struct.biosregs* %4)
  %8 = load i32, i32* %3, align 4
  %9 = getelementptr inbounds %struct.biosregs, %struct.biosregs* %4, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = call i32 @intcall(i32 16, %struct.biosregs* %4, %struct.biosregs* null)
  %11 = getelementptr inbounds %struct.biosregs, %struct.biosregs* %4, i32 0, i32 1
  store i32 15, i32* %11, align 4
  %12 = call i32 @intcall(i32 16, %struct.biosregs* %4, %struct.biosregs* %5)
  store i32 1, i32* @do_restore, align 4
  %13 = getelementptr inbounds %struct.biosregs, %struct.biosregs* %5, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = and i32 %14, 127
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %29

20:                                               ; preds = %1
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @boot_params, i32 0, i32 0, i32 0), align 4
  %23 = icmp ne i32 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %20
  %25 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @boot_params, i32 0, i32 0, i32 0), align 4
  %26 = getelementptr inbounds %struct.biosregs, %struct.biosregs* %4, i32 0, i32 2
  store i32 %25, i32* %26, align 4
  %27 = call i32 @intcall(i32 16, %struct.biosregs* %4, %struct.biosregs* null)
  br label %28

28:                                               ; preds = %24, %20
  store i32 -1, i32* %2, align 4
  br label %29

29:                                               ; preds = %28, %19
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @initregs(%struct.biosregs*) #1

declare dso_local i32 @intcall(i32, %struct.biosregs*, %struct.biosregs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
